Removed fa-awesome from the component. Added fa-awesome to the demo. 3.0.0 -> 3.0.1

--- a/demo/index.html
+++ b/demo/index.html
@@ -5,6 +5,7 @@
     <title>&lt;pk-datepicker&gt;</title>
     <script>//Polymer = {dom: 'shadow'};</script>
     <script src="../../webcomponentsjs/webcomponents-lite.min.js"></script>
+    <link rel="import" href="../../fa-awesome/fa-awesome.html">
     <link rel="import" href="../pk-datepicker.html">
 
     <style is="custom-style">
